--- a/age-calculator-app-main/styles.css
+++ b/age-calculator-app-main/styles.css
@@ -61,7 +61,8 @@ main {
     left: 50%;
     transform: translateX(-50%);
     transition: left, background-color;
-    transition-duration: 1s;
+    transition-duration: 2s;
+    transition-delay: 0.5;
 }
 
 #submit:hover {
